--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "google-map-react": "^2.2.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^6.25.0",
     "use-places-autocomplete": "^4.0.1"
   },
   "devDependencies": {
